Closed
Bug 751929
Opened 13 years ago
Closed 13 years ago
Crash when Alt+Space (inbound hourly crashes but not inbound nightly same change-set)
Categories
(Core :: Widget: Win32, defect)
Tracking
()
RESOLVED
FIXED
mozilla15
People
(Reporter: alice0775, Assigned: masayuki)
References
Details
(Keywords: regression)
Attachments
(1 file)
893 bytes,
patch
|
jimm
:
review+
|
Details | Diff | Splinter Review |
Build Identifier:
Inbound hourly build
http://hg.mozilla.org/integration/mozilla-inbound/rev/5854da577bcb
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:15.0) Gecko/15.0 Firefox/15.0a1 ID:20120504005049
Inbound nightly build
http://hg.mozilla.org/integration/mozilla-inbound/rev/5854da577bcb
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:15.0) Gecko/15.0 Firefox/15.0a1 ID:20120504040218
Crash when Alt+Space in inbound hourly
Strange thing: inbound hourly crashes but not inbound nightly same change-set
Reproducible: Always
Steps to Reproduce:
1. Alt+Space
Actual results:
Crash
Expected results:
Not crash.
Window control menu pops up.
Regression window:
Works:
http://hg.mozilla.org/integration/mozilla-inbound/rev/a6a335cd2c94
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:15.0) Gecko/15.0 Firefox/15.0a1 ID:20120503010011
Fails:
http://hg.mozilla.org/integration/mozilla-inbound/rev/de5745bce8bc
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:15.0) Gecko/15.0 Firefox/15.0a1 ID:20120503013602
Pushlog:
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=a6a335cd2c94&tochange=de5745bce8bc
Regressed by: Bug 166240
Assignee | ||
Comment 1•13 years ago
|
||
Oh, this is an idiot mistake... not crashed, it aborts itself...
Assignee: nobody → masayuki
Status: NEW → ASSIGNED
Assignee | ||
Comment 2•13 years ago
|
||
Just inserting "break" at the end of case WM_*CHAR in NativeKey.
Attachment #621099 -
Flags: review?(jmathies)
![]() |
||
Updated•13 years ago
|
Attachment #621099 -
Flags: review?(jmathies) → review+
Assignee | ||
Comment 3•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Keywords: regression
Resolution: --- → FIXED
Target Milestone: --- → mozilla15
You need to log in
before you can comment on or make changes to this bug.
Description
•