Bug 751929 Insert break at WM_*CHAR case in constructor of mozilla::widget::NativeKey r=jimm